--- a/index.css
+++ b/index.css
@@ -18,8 +18,8 @@
   border-right: 2px solid;
   font-size: 30px;
   margin: 0 auto;
-  /* The initial length is 0 */
   width: 0;
+  /* The initial length is 0 */
   animation: typing 6s steps(30, end) infinite, blink 0.75s step-end infinite;
 }
 
@@ -40,7 +40,6 @@
     border-color: transparent;
   }
 }
-
 
 .hero-container p {
   font-size: 20px;
@@ -160,14 +159,28 @@
   display: flex;
   justify-content: center;
 }
-
-.service-item img {
-  width: 200px;
-  height: 200px;
+.service-item-image{
+  width: 100%;
+  height: 240px;
+  background-size: cover;
+  background-position: center;
   margin-right: 10px;
+}
+.service-item-bg1 {
+  background-image: url('./image/flight.jpg');
+}
+.service-item-bg2 {
+  background-image: url('./image/activity.jpg');
+}
+.service-item-bg3 {
+  background-image: url('./image/air-transfer.jpg');
+}
+.service-item-bg4 {
+  background-image: url('./image/hotel.jpg');
 }
 
 .service-item-text {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -175,7 +188,10 @@
 
 .service-item-text h4 {
   font-size: 20px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+}
+service-item-text p{
+  max-height: 120px;
 }
 
 
