--- a/pages/contact-us/contact.css
+++ b/pages/contact-us/contact.css
@@ -63,13 +63,13 @@
 
 .contact-form input {
   margin-top: 10px;
-  /* margin-bottom: 20px; */
   height: 30px;
 }
 
 .contact-form textarea {
   margin-top: 10px;
-  /* margin-bottom: 20px; */
+  width: 300px;
+  height: 120px;
 }
 
 .error {
