--- a/pages/contact-us/contact.css
+++ b/pages/contact-us/contact.css
@@ -1,3 +1,4 @@
+/* hero section */
 .contact-hero-section {
   width: 100%;
   height: 400px;
@@ -20,6 +21,7 @@
   margin: 0 auto;
 }
 
+/* form section */
 .contact-section-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -64,6 +66,7 @@
 .contact-form input {
   margin-top: 10px;
   height: 30px;
+  width: 240px;
 }
 
 .contact-form textarea {
